2003/12/30 11:49 (-0500) rwmcfa1

	* CodeGen.pm, pm/Helper.pm, pm/Pango.pm: version numbers added

2003/12/30 04:03 (+0100) kaffeetisch

	* t/11.GtkStatusbar.t: Test [sg]et_has_resize_grip and remove.

2003/12/29 20:05 (-0500) rwmcfa1

	* pm/TestHelper.pm: allow init_check to be skipped.

	* t/22.GtkListStore.t, t/23.GtkTreeStore.t: don't init_check with 
	TestHelper.pm

2003/12/29 16:32 (-0500) rwmcfa1

	* t/ignore_keyboard.pl: deleted, functionality in TestHelper.pm

	* pm/TestHelper.pm: initial import

	* Makefile.PL: added pm/TestHelper.pm to list of pm_files

	* MANIFEST: added pm/TestHelper.pm and removed t/ignore_keyboard.pl
 
	* t/*: quit using ignore_keyboard.pl and use TestHelper.pm instead

2003/12/29 22:58 (+0100) kaffeetisch

	* t/15.GtkHandleBox.t
	* xs/GtkHandleBox.xs: Implement and test get_child_detached.

	* xs/GtkMessageDialog.xs: Don't use "../" for including gtk2perl.h
	and ppport.h.

2003/12/29 16:32 (-0500) rwmcfa1

	* perl-Gtk2.spec.in: use the new DATE replacement in conjunction with
	VERSION to create the changlog on the fly, which is better.

2003/12/29 06:19 (+0100) kaffeetisch

	* t/01.GtkWindow.t: Disable the begin_resize_drag and
	begin_move_drag tests.

2003/12/29 03:21 (+0100) kaffeetisch

	* t/01.GtkWindow.t
	* t/12.GtkDialog.t
	* t/21.GtkContainer.t: Add tests for the remaining functions.

	* xs/GtkColorSelectionDialog.xs
	* xs/GtkFileSelection.xs: Provide accessors for all struct fields.

	* xs/GtkWindow.xs: Use gchar_ornull in set_title.  Provide a
	default for the focus argument of set_focus and the mask argument
	of set_geometry_hints.  Add a class parameter to
	set_auto_startup_notification.

2003/12/28 06:32 (+0100) kaffeetisch

	* xs/GdkEvent.xs: Implement Gtk2::Gdk::Event::Expose::region.

	* xs/GdkGC.xs: Implement set_clip_region.

	* gtk2perl.h
	* maps
	* xs/GdkRegion.xs: Initial implementation.  Register a custom
	GBoxed GType for GdkRegion.

	* gdk.typemap
	* gtk2perl.h