@@ -1,3 +1,8 @@
+2003/12/30 12:47 (-0500) muppetman
+
+	* xs/GtkMessageDialog.xs: fix broken utf8 handling.  also now properly
+	allows undef for the format specifier.
+
 2003/12/30 11:49 (-0500) rwmcfa1
 
 	* CodeGen.pm, pm/Helper.pm, pm/Pango.pm: version numbers added
